8180511: Null pointer dereference in Matcher::ReduceInst()

Fixed a missing null check on the return value of MachNodeGenerator() found by Parfait.

Reviewed-by: kvn